feat: implement frontend pages and backend enhancements for mini program
- Add admin login with MD5 password encryption
- Enhance auth service with wechat openid login support
- Add order service improvements for mini program flow
- Implement mini program pages: cart, checkout, order, profile, product
- Add age verification modal component
- Add demo data migrations and missing entity fields
- Configure vite for mini program build

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>